# Projet-Annuel

./: .htaccess  GA.php  README.md  composer.json  index.php  mail.php  panier.js
AppC/: CMakeLists.txt  ConnectBDD.c  Struct.h  a.out  curlweather.c  main  main.c  main.cpp  test.c  weather.json  weather.txt
FRONT/: commentçamarche.php  config.php  connexion.php  contact.html  contact.php  deconnexion.php  en.php  fb.php  fr.php  index.html  index.php  inscription.php  login.html  login.php  longin.php  map.php  payments.php  profil.php  sign-up.php  singup.html  singup.php
FRONT/BDD/: bdd_phpmyadmin.sql
FRONT/css/: style.css
FRONT/factures/: fpdf.php  index.php
FRONT/include/: app.php  footer.php  menu.php  menulogin.php  menusingup.php
FRONT/mapping/: check_reservation.php  close_reservation.php  map_class.php  mapping_functions.php  reservation_process.php
PHPMailer-master/: fonction.php  phpunit.xml.dist
adminTemplate/: CHANGELOG.md  README.md  gulpfile.js  index.html  package.json
controllers/: Forfait.php  Invoice.php  Login.php  Mail.php  Product.php  Profil.php  Shop.php  Stripe.php  Token.php  Weather.php  scooter.php  user.php
dashboard/: index.html
database/: setting.php
models/: Forfait.php  Token.php  UserModel.php  WeatherModel.php  forfaitModel.php  invoiceModel.php  productModel.php  profilModel.php  scooterModel.php  shopModel.php  userModel.php
router/: router.php
view/: Forfait.php  formsign-up.php  home.html  scooterMana.php  sign-in.php  signFooter.php  signHeader.php  test-json.php  test.php  userlist.php  weather.json
(+121 files in other folders)
